2007-02-04  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=12602
        XPath functions string(), normalize-space() and string-length() don't work
        without arguments

        * fast/xpath/implicit-node-args-expected.txt: Added.
        * fast/xpath/implicit-node-args.html: Added.
        Some cases in the test are commented out for now due to bug 12603.

2007-02-04  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=8791
        XPath should support custom node resolvers

        * fast/xpath/nsresolver-bad-object-expected.txt: Added.
        * fast/xpath/nsresolver-bad-object.xhtml: Added.
        * fast/xpath/nsresolver-exception-expected.txt: Added.
        * fast/xpath/nsresolver-exception.xhtml: Added.
        * fast/xpath/nsresolver-function-expected.txt: Added.
        * fast/xpath/nsresolver-function.xhtml: Added.
        * fast/xpath/nsresolver-object-expected.txt: Added.
        * fast/xpath/nsresolver-object.xhtml: Added.

2007-02-04  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=12562
        Fix test cases that are now spewing console errors that 
        they are not testing for

        * fast/events/iframe-object-onload-expected.txt:
        * fast/events/iframe-object-onload.html: Change nil to null.
        * fast/forms/display-none-in-onchange-keyboard-expected.txt:
        * fast/forms/display-none-in-onchange-keyboard.html: Add missing id to div, change 
        its text, and change the resulting text.
        * fast/forms/input-text-click-inside-expected.checksum:
        * fast/forms/input-text-click-inside-expected.png:
        * fast/forms/input-text-click-inside-expected.txt:
        * fast/forms/input-text-click-inside.html: Change moveTo(x,y) to mouseMoveTo(x,y).
        * fast/forms/input-text-click-outside-expected.txt: