@@ -2,5 +2,5 @@ This page tests for a crash when accessing a custom property on a DOM object aft
 
 If the test passes, you'll see a 'PASS' message below.
 
-PASS: document.body.style.myCustomProperty should be 1 and is.
+PASS: you didn't crash
 
