@@ -1,3 +1,14 @@
+2007-02-05  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by John Sullivan and Darin Adler.
+
+        Focused gc-8.html on the issue it was really trying to test (a crash)
+        to fix intermittent failures seen on buildbot.
+        
+        * fast/dom/gc-8.html: Don't test the value of our custom property, which
+        (legitimately) can be cleared by garbage collection.
+        * fast/dom/gc-8-expected.txt: 
+
 2007-02-04  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
